删除无用文件,格式处理